@@ -9,7 +9,6 @@ class ProfilesModel : public TemplatedDataModel<ProfileObject>
     ProfileObject emptyProfile;
 protected:
     std::map<QString, ProfileObject*> id2object;
-    bool canAppend(ProfileObject *object) const override;
     void internalAppend(ProfileObject *object) override;
     void internalClear() override;
 public:
