@@ -5,3 +5,10 @@ MultiPurposeObject::MultiPurposeObject(QObject *parent)
 {
 
 }
+
+void MultiPurposeObject::assign(const MultiPurposeObject &other)
+{
+    setId(other.id());
+    setName(other.name());
+    setCaption(other.caption());
+}
