@@ -1,33 +1,26 @@
-#include "spaceobject.h"
+#include "rightgroupobject.h"
 #include <QJsonObject>
 
-SpaceObject::SpaceObject(QObject *parent)
+RightGroupObject::RightGroupObject(QObject *parent)
     : DataObjectInterface{parent}
 {
 
 }
 
-
-void SpaceObject::fromJSON(QJsonObject &o)
+void RightGroupObject::fromJSON(QJsonObject &o)
 {
     setId(o[tableFields.id].toString());
     setName(o[tableFields.name].toString());
     setAutomatic(o[tableFields.automatic].toString() == "t");
     setaccess_code(o[tableFields.access_code].toString());
     setcreater_id(o[tableFields.creater_id].toString());
-    setmember(o["member"].toString() == "t");
-    setrequested(o["requested"].toString() == "t");
-    setdenied(o["denied"].toString() == "t");
 }
 
-void SpaceObject::assign(const SpaceObject &other)
+void RightGroupObject::assign(const RightGroupObject &other)
 {
     setId(other.id());
     setName(other.name());
     setAutomatic(other.automatic());
     setaccess_code(other.access_code());
     setcreater_id(other.creater_id());
-    setmember(other.member());
-    setrequested(other.requested());
-    setdenied(other.denied());
 }
